--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,15 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/SBMS27
+    url: jdbc:mysql://mysqldb:3306/SBMS27
     username: root
   jpa:
     hibernate:
       ddl-auto: update
-      dialect: org.hibernate.dialect.MySQL57Dialect
     show_sql: true
+    properties:
+      hibernate:
+       dialect: org.hibernate.dialect.MySQL5Dialect
   mvc:
     view:
       prefix: /views/
